crates/deadline-cli/tests/snapshots/cli_suggest__farm_get_not_found_more_than_10_farms_shows_and_more.snap
---
source: crates/deadline-cli/tests/cli_suggest.rs
info:
  program: deadline
  args:
    - farm
    - get
    - "--farm-id"
    - farm-bad
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:61844"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:61844"
    AWS_ENDPOINT_URL_STS: "http://localhost:61844"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpsSeRMj/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpsSeRMj
---
success: false
exit_code: 1
----- stdout -----
Failed to get Farm from Deadline:
ResourceNotFoundException: No message
Available farms:
  farm-000  Farm 0
  farm-001  Farm 1
  farm-002  Farm 2
  farm-003  Farm 3
  farm-004  Farm 4
  farm-005  Farm 5
  farm-006  Farm 6
  farm-007  Farm 7
  farm-008  Farm 8
  farm-009  Farm 9
  ... and 5 more

----- stderr -----
